feat: refactor chat placeholder related logic to support customized trigger keywords